todo/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
  labels:
    app: todo-db
spec:
  selector:
    matchLabels:
      app: todo-db
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db-service
spec:
  selector:
    app: todo-db 
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
