todo/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-notification
  labels:
    app: todo-notification
spec:
  selector:
    matchLabels:
      app: todo-notification
  template:
    metadata:
      labels:
        app: todo-notification
    spec:
      containers:
      - name: todo-notification
        image: cyredhat/todo-notification:latest
        ports:
        - containerPort: 9000
        livenessProbe:
          httpGet:
            path: /service_info
            port: 9000
          initialDelaySeconds: 20
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: todo-notification-service
spec:
  selector:
    app: todo-notification
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9000
