todo/todo-noti.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-noti-deployment
  labels:
    app: todo-noti
spec:
  selector:
    matchLabels:
      app: todo-noti
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-noti
    spec:
      containers:
        - name: todo-noti
          image: supanart2010/todo-notification-service:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-noti-service
spec:
  selector:
    app: todo-noti
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
