todo/todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  labels:
    app: todo
spec:
  selector:
    matchLabels:
      app: todo
  replicas: 2
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: supanart2010/my-todo:v3.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
