todo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
 # annotations:
 #   kubernetes.io/ingress.class: public
 #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "sds-final.com"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: todo-service
              port:
                number: 8000
